# darts

SDL/: .hgignore  .hgtags  CMakeLists.txt  Makefile.in  Makefile.wiz  cmake_uninstall.cmake.in  configure  configure.in  sdl2-config.cmake.in
SDL/acinclude/: libtool.m4
SDL/android-project/: AndroidManifest.xml
SDL/build-scripts/: androidbuild.sh  checker-buildbot.sh  config.guess  config.sub  emscripten-buildbot.sh  g++-fat.sh  gcc-fat.sh  nacl-buildbot.sh  update-copyright.sh
SDL/cmake/: sdlchecks.cmake
SDL/debian/: changelog  control  copyright  libsdl2-dev.install
SDL/docs/: README-linux.md
SDL/include/: SDL_config_windows.h  SDL_hints.h
SDL/premake/: README-ios.txt  README-linux.txt  README-macosx.txt  README.txt  premake4.lua
data/: res.xml
data/fonts/: imprint_mt_32.fnt  imprint_mt_46.fnt
oxygine-sound/src/: ResSound.cpp  ResSound.h  oxygine-sound.h
proj.android/: AndroidManifest.xml  build.bat  build.sh  build.xml  install.bat  install.sh  project.properties
proj.cmake/: CMakeLists.txt  run.sh
proj.emscripten/: CMakeLists.txt  build.bat  build_release.bat
proj.ios/darts_ios.xcodeproj/: project.pbxproj
proj.macosx/darts_macosx.xcodeproj/: project.pbxproj
proj.win32/: ClassDiagram.cd  darts.sln  darts.vcxproj  darts.vcxproj.filters
proj.win32/Debug_v140/: darts.vcxprojResolveAssemblyReference.cache  oxygine-sound.lib  vc140.idb
src/: AI.h  App.cpp  App.h  Dartboard.cpp  Dartboard.h  Game.cpp  Game.h  GameProcess.h  Globals.h  Menu.cpp  Menu.h  Range.cpp  Range.h  RealPlayer.h  Scoretable.cpp  Scoretable.h  Target.cpp
(+427 files in other folders)
